# iOSQtS3Upload

./: .gitignore  CMakeLists.txt  DoQtMess.cmake  LICENSE  README.md  ios-toolchain.cmake.in  main.m  main.mm  makeHttpBody.py  plist.in  s3.h  s3.m  test_processed.txt  utilities.cpp  utilities.h
